ContrastHighInverse GTK3: fix flat buttons in m-c-c and pluma
- set line numbers background in pluma
- give frames in pluma caja and notbooks round corners
- adjust mate-panel
- fix hover fg_color
- fix menu hover borders
- add arrows in scrollbars
- add fine-tuning in scrollbars

--- a/desktop-themes/ContrastHighInverse/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ContrastHighInverse/gtk-3.0/gtk-widgets.css
@@ -1,26 +1,3 @@
-/* common color definitions */
-
-@define-color warning_color #ff4400;
-@define-color warning_bg_color @warning_color;
-@define-color warning_fg_color white;
-
-@define-color question_color #0000ff;
-@define-color question_bg_color @question_color;
-@define-color question_fg_color white;
-
-@define-color error_color #ff0000;
-@define-color error_bg_color @error_color;
-@define-color error_fg_color white;
-
-@define-color error_color #ff0000;
-@define-color success_color #00ff00;
-
-/* fallback mode */
-@define-color os_chrome_bg_color white;
-@define-color os_chrome_fg_color #ccc;
-@define-color os_chrome_selected_bg_color #333;
-@define-color os_chrome_selected_fg_color black;
-
 * {
     -GtkRange-stepper-size: 2;
     -GtkScale-slider-length: 28;
@@ -283,6 +260,23 @@ GtkLevelBar.vertical {
     padding: 5px;
 }
 
+/* ie. mate-control-center */
+.button.flat {
+    padding: 0px;
+    border-color: transparent;
+    background-color: transparent;
+    background-image: none;
+    color: @theme_fg_color;
+    box-shadow: inset 0 1px rgba(255,255,255,0), 0 1px rgba(255,255,255,0);
+    text-shadow: none;
+    icon-shadow: none;
+    border-image: none;
+}
+
+.button.flat.hover {
+    border-radius: 3px;
+}
+
 .button:active {
     background-color: @theme_button_active_bg;
     color: @theme_base_color;
@@ -517,18 +511,30 @@ GtkComboBox .button {
     color: @theme_fg_color;
 }
 
-.menuitem {
+.menuitem,
+.menu .menuitem {
     color: @theme_fg_color;
     background-color: transparent;
 }
 
-.menuitem:insensitive {
+.menuitem:insensitive,
+.menu .menuitem:insensitive {
     color: @theme_button_insensitive_fg;
 }
 
-.menuitem:hover {
-    color: @theme_base_color;
+.menubar .menuitem:hover {
+    color: @theme_fg_color;
     background-color: @theme_active_color;
+}
+
+.menu .menuitem:hover {
+    color: @theme_fg_color;
+    background-color: @theme_active_color;
+    border-style: solid;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-left-color: @theme_fg_color;
+    border-right-color: @theme_fg_color;
 }
 
 .menu .menuitem {
@@ -539,7 +545,8 @@ GtkComboBox .button {
     padding: 3px 5px;
 }
 
-.menuitem.separator {
+.menuitem.separator,
+.menu .menuitem.separator {
     -GtkMenuItem-horizontal-padding: 0;
 }
 
@@ -862,6 +869,10 @@ GtkSwitch.trough:active:insensitive {
     border-style: solid;
     background-clip: border-box;
     background-color: @theme_notebook_bg;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
 .notebook :hover {
@@ -926,30 +937,54 @@ GtkScrolledWindow GtkViewport.frame {
     border-style: none;
 }
 
+/**************
+ * Scrollbars *
+ **************/
+
 .scrollbar {
     -GtkRange-slider-width: 17;
     -GtkRange-stepper-size: 17;
     -GtkRange-trough-border: 0;
-    -GtkScrollbar-has-backward-stepper: false;
-    -GtkScrollbar-has-forward-stepper: false;
+    -GtkScrollbar-has-backward-stepper: true;
+    -GtkScrollbar-has-forward-stepper: true;
     -GtkScrollbar-min-slider-length: 64;
 }
 
-.scrollbar.trough {
+.scrollbars-junction {
+    background-image: linear-gradient(to bottom,
+                                      shade (@theme_internal_bg, 1.0),
+                                      shade (@theme_internal_bg, 1.0));
     background-color: @theme_internal_bg;
+    border-width: 0px;
+    border-color: @theme_internal_bg;
+    border-radius: 0px;
+    border-image: linear-gradient(to bottom,
+                                  shade (@theme_internal_bg, 1.0),
+                                  shade (@theme_internal_bg, 1.0));
+    box-shadow: none;
+}
 
+.scrollbar.trough,
+.scrollbar.trough.vertical,
+.sidebar .scrollbar.trough,
+.osd .scrollbar.trough {
+    background-color: @theme_internal_bg;
     border-width: 0;
     border-color: transparent;
     border-radius: 0;
 }
 
-.scrollbars-junction {
+.scrollbar.trough.horizontal {
     background-color: @theme_internal_bg;
+    border-width: 0;
+    border-color: transparent;
+    border-radius: 0;
 }
 
-.scrollbar.slider {
+.scrollbar.slider,
+.sidebar .scrollbar.slider,
+.osd .scrollbar.slider {
     background-color: @theme_slider_bg;
-
     border-style: solid;
     border-radius: 12px;
     border-width: 3px;
@@ -957,10 +992,26 @@ GtkScrolledWindow GtkViewport.frame {
 }
 
 .scrollbar.slider:hover,
-.scrollbar.slider:active:hover {
+.scrollbar.slider:active:hover,
+.scrollbar.slider.vertical:hover,
+.scrollbar.slider.vertical:active:hover,
+.scrollbar.slider.horizontal:hover,
+.scrollbar.slider.horizontal:active:hover,
+.sidebar .scrollbar.slider:hover,
+.sidebar .scrollbar.slider:hover:active,
+.osd .scrollbar.slider:hover,
+.osd .scrollbar.slider:active {
     background-color: @theme_fg_color;
     border-width: 3px;
     border-color: transparent;
+}
+
+.scrollbar.slider.fine-tune:prelight:active {
+    background-image: none;
+    border-style: solid;
+    border-image: none;
+    border-color: transparent;
+    border-width: 5px;
 }
 
 /******************
